# druid-datafusion-bridge

./: .gitattributes  Cargo.toml  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: blank.md  bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md  SUPPORT.md
src/: error.rs  lib.rs  main.rs
src/column/: bitmap.rs  compressed_doubles.rs  compressed_ints.rs  compressed_longs.rs  double.rs  float.rs  generic_indexed.rs  long.rs  mod.rs  string.rs  time.rs  vsize_ints.rs
src/compression/: mod.rs
src/datafusion_ext/: execution_plan.rs  mod.rs  table_provider.rs
src/segment/: column_descriptor.rs  metadata.rs  mod.rs  smoosh.rs  version.rs
tests/: wikipedia_segment_test.rs
tests/fixtures/: README.md
tests/fixtures/wikipedia-segment/: meta.smoosh
