[package]
name = "druid-datafusion-bridge"
version = "0.1.0"
edition = "2024"

[dependencies]
# Arrow / DataFusion
datafusion = "44"
arrow = { version = "53", features = ["prettyprint"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Binary format
byteorder = "1"
memmap2 = "0.9"

# Compression
lz4_flex = "0.11"
roaring = "0.10"

# CLI
clap = { version = "4", features = ["derive"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Async
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
tempfile = "3"
